<resources>
    <string name="app_name">Almazon</string>
    <string name="btn_login">Login</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_remember">Remember Me</string>
    <string name="btn_createProduct">Create Product</string>
    <string name="btn_productManager">Product Manager</string>
    <string name="txt_greeting">Welcome, </string>
    <string name="lbl_nameProduct">Name of product</string>
    <string name="lbl_weightProduct">Weight of product</string>
    <string name="lbl_priceProduct">Unit Price</string>
    <string name="btn_sendProduct">SEND PRODUCT</string>
    <string name="lbl_ID">Product ID</string>
    <string name="product_title">PRODUCT</string>
    <string name="lbl_Name">Name</string>
    <string name="lbl_Price">Unit Price</string>
    <string name="lbl_Weight">Weight</string>
    <string name="btn_requestProduct">Search</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Delete">DELETE</string>
    <string name="btn_Update">UPDATE</string>
</resources>